--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wiseagr-org/wgo-crypto",
+  "name": "@wisegar-org/wgo-crypto",
   "version": "0.0.1-build.0",
   "description": "WGO Module Template",
   "main": "build/index.js",
